--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -10,23 +10,12 @@
             classpath:/META-INF/spring/spring-*.xml,
             classpath:/META-INF/spring-data/spring-data-*.xml,
             classpath:/META-INF/spring-integration/spring-integration-*.xml
-            classpath:/META-INF/spring-security/spring-security-*.xml
         </param-value>
     </context-param>
 
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-
-    <filter>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
 
     <servlet>
         <servlet-name>api</servlet-name>
@@ -49,7 +38,7 @@
 
     <servlet-mapping>
         <servlet-name>main</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
 </web-app>
