added ldap (not working)

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -94,11 +94,6 @@
                         <artifactId>h2</artifactId>
                         <version>1.3.160</version>
                     </dependency>
-                    <dependency>
-                        <groupId>mysql</groupId>
-                        <artifactId>mysql-connector-java</artifactId>
-                        <version>5.1.18</version>
-                    </dependency>
                 </dependencies>
             </plugin>
         </plugins>
@@ -263,6 +258,16 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-ldap</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-cas</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -371,7 +376,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>test</scope>
+            <version>5.1.22</version>
         </dependency>
 
         <!-- Commons -->
