--- a/etc/application.properties
+++ b/etc/application.properties
@@ -1,3 +1,18 @@
+# CAS/Security
+external.base.url=http://localhost:8080/ohsc
+cas.base.url=https://www.cell-life.org/cas
+
+# LDAP
+ldap.url=ldap://ldap.cell-life.org
+ldap.manager.dn=cn=admin,dc=cell-life,dc=org
+ldap.manager.password=gUOU6pgUlQ1IcRaKPStysFEB1rfYlM8A
+ldap.root=
+ldap.pooled=true
+ldap.user.search.base=ou=people,dc=cell-life,dc=org
+ldap.user.search.filter=(mail={0})
+ldap.group.search.base=ou=groups,dc=cell-life,dc=org
+ldap.group.search.filter=(uniqueMember={0})
+ldap.role.prefix=ROLE_
 
 # Hibernate
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
