--- a/pom.xml
+++ b/pom.xml
@@ -264,6 +264,18 @@
                 <artifactId>spring-security-config</artifactId>
                 <version>3.1.0.RELEASE</version>
             </dependency>
+            
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-ldap</artifactId>
+                <version>3.1.0.RELEASE</version>
+            </dependency>
+
+             <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-cas</artifactId>
+                <version>3.1.0.RELEASE</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.springframework.security</groupId>
@@ -386,7 +398,7 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.18</version>
+                <version>5.1.22</version>
             </dependency>
 
             <!-- Commons -->
