Adding default ehcache.xml

--- a/etc/application.properties
+++ b/etc/application.properties
@@ -6,7 +6,7 @@ cas.base.url=https://www.cell-life.org/cas
 ldap.url=ldap://ldap.cell-life.org
 ldap.manager.dn=cn=admin,dc=cell-life,dc=org
 ldap.manager.password=gUOU6pgUlQ1IcRaKPStysFEB1rfYlM8A
-ldap.root=dc=cell-life,dc=org
+ldap.root=dc=test,dc=cell-life,dc=org
 ldap.pooled=true
 ldap.user.search.base=ou=people
 ldap.user.search.filter=(mail={0})
