Fixed broken tests

--- a/etc/application.properties
+++ b/etc/application.properties
@@ -18,11 +18,16 @@ ldap.role.prefix=ROLE_
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.hbm2ddl.auto=validate
 
-# REST API
-base.uri=http://localhost:9000/api/
-
 # DHIS
 dhis.username=Cell_Life
 dhis.password=Mob1le123
 dhis.base_url=http://hct.cell-life.org:8080/dhis/
 dhis.synchronisation.cron=0 0 1 * * *
+
+# Resource URLs
+provinces.url=${external.base.url}/api/provinces
+districts.url=${external.base.url}/api/districts
+subdistricts.url=${external.base.url}/api/subdistricts
+clinics.url=${external.base.url}/api/clinics
+ratings.url=${external.base.url}/api/ratings
+ratingdatamart.url=${external.base.url}/api/datamart/ratings
