Added Aggregate Entity ClinicAverages

--- a/etc/application.properties
+++ b/etc/application.properties
@@ -30,4 +30,4 @@ districts.url=${external.base.url}/api/districts
 subdistricts.url=${external.base.url}/api/subdistricts
 clinics.url=${external.base.url}/api/clinics
 ratings.url=${external.base.url}/api/ratings
-ratingdatamart.url=${external.base.url}/api/datamart/ratings
+datamartratings.url=${external.base.url}/api/datamartratings
