--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -40,10 +40,18 @@
                 <version>1.5</version>
                 <executions>
                     <execution>
+                        <id>compile</id>
                         <goals>
                             <goal>compile</goal>
                         </goals>
                         <phase>compile</phase>
+                    </execution>
+                    <execution>
+                        <id>test-compile</id>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                        <phase>test-compile</phase>
                     </execution>
                 </executions>
                 <dependencies>
