Added SubDistrict, District, and Province to Averages

--- a/etc/application.properties
+++ b/etc/application.properties
@@ -1,3 +1,7 @@
+# Internal Service Invocation
+internal.user=internal
+internal.password=password
+
 # CAS/Security
 external.base.url=http://localhost:9000/
 cas.base.url=https://www.cell-life.org/cas
@@ -6,7 +10,7 @@ cas.base.url=https://www.cell-life.org/cas
 ldap.url=ldap://ldap.cell-life.org
 ldap.manager.dn=cn=admin,dc=cell-life,dc=org
 ldap.manager.password=gUOU6pgUlQ1IcRaKPStysFEB1rfYlM8A
-ldap.root=dc=test,dc=cell-life,dc=org
+ldap.root=dc=cell-life,dc=org
 ldap.pooled=true
 ldap.user.search.base=ou=people
 ldap.user.search.filter=(mail={0})
@@ -31,3 +35,4 @@ subdistricts.url=${external.base.url}/api/subdistricts
 clinics.url=${external.base.url}/api/clinics
 ratings.url=${external.base.url}/api/ratings
 datamartratings.url=${external.base.url}/api/datamartratings
+averages.url=${external.base.url}/service/averages
