Wiring in Averages Service into reports controller. Fixing Basic Auth / Cas Auth separation between UI and REST services. Added /ohsc context to jetty. Add base tag to jsps

--- a/etc/application.properties
+++ b/etc/application.properties
@@ -3,7 +3,7 @@ internal.username=internal
 internal.password=password
 
 # CAS/Security
-external.base.url=http://localhost:9000/
+external.base.url=http://localhost:9000/ohsc
 cas.base.url=https://www.cell-life.org/cas
 
 # LDAP
