--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -161,7 +161,7 @@
                     <stopKey>STOP</stopKey>
                     <stopPort>9001</stopPort>
                     <webAppConfig>
-                        <contextPath>/</contextPath>
+                        <contextPath>/ohsc</contextPath>
                     </webAppConfig>
                     <connectors>
                         <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
@@ -445,6 +445,12 @@
         </dependency>
 
         <!-- Servlet -->
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
