Split generic report JSP into specific regional jsps

--- a/etc/application.properties
+++ b/etc/application.properties
@@ -34,5 +34,6 @@ districts.url=${external.base.url}/api/districts
 subdistricts.url=${external.base.url}/api/subdistricts
 clinics.url=${external.base.url}/api/clinics
 ratings.url=${external.base.url}/api/ratings
-datamartratings.url=${external.base.url}/api/datamartratings
-averages.url=${external.base.url}/service/averages
+datamartratings.resource.url=${external.base.url}/api/datamartratings
+averages.service.url=${external.base.url}/service/averages
+rating.service.url=${external.base.url}/service/ratings
