fixed up DHIS URL

--- a/etc/application.properties
+++ b/etc/application.properties
@@ -25,7 +25,7 @@ hibernate.hbm2ddl.auto=validate
 # DHIS
 dhis.username=Cell_Life
 dhis.password=Mob1le123
-dhis.base_url=http://hct.cell-life.org:8080/dhis/
+dhis.base_url=http://hct.cell-life.org/dhis/
 dhis.synchronisation.cron=0 0 1 * * *
 
 # Resource URLs
