Integrating reports EUQ-88

--- a/etc/application.properties
+++ b/etc/application.properties
@@ -37,3 +37,6 @@ ratings.url=${external.base.url}/api/ratings
 datamartratings.resource.url=${external.base.url}/api/datamartratings
 averages.service.url=${external.base.url}/service/averages
 rating.service.url=${external.base.url}/service/ratings
+
+# Reporting
+report.delete.cron=0 0 23 * * *
