--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -498,7 +498,6 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <!-- Groovy -->
@@ -525,6 +524,17 @@
             <groupId>org.milyn</groupId>
             <artifactId>milyn-smooks-all</artifactId>
         </dependency>
+        
+        <!-- Cell-Life reporting framework -->
+		<dependency>
+		    <groupId>org.celllife.report</groupId>
+		    <artifactId>celllife-report-reporting</artifactId>
+		</dependency>
+		 
+		<dependency>
+		    <groupId>org.celllife.report</groupId>
+		    <artifactId>celllife-report-pconfig</artifactId>
+		</dependency>
 
     </dependencies>
 
