--- a/etc/application.properties
+++ b/etc/application.properties
@@ -18,9 +18,33 @@ ldap.group.search.base=ou=groups
 ldap.group.search.filter=(uniqueMember={0})
 ldap.role.prefix=ROLE_
 
+# Database
+database.jdbcUrl=jdbc:h2:target/test;MVCC=true
+database.driverClass=org.h2.Driver
+database.username=sa
+database.password=password
+database.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#database.jdbcUrl=jdbc:mysql://localhost:3306/ohsc?autoReconnect=true&useUnicode=true&characterEncoding=UTF8
+#database.driverClass=com.mysql.jdbc.Driver
+#database.username=ohsc
+#database.password=ohsc
+#database.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 # Hibernate
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.hbm2ddl.auto=validate
+hibernate.show_sql=false
+
+# c3p0 connection pool
+c3p0.checkout_timeout=3000
+c3p0.idle_connection_test_period=30
+c3p0.initial_pool_size=20
+c3p0.max_idle_time=20
+c3p0.max_pool_size=30
+c3p0.min_pool_size=20
+c3p0.max_statements=200
+c3p0.preferred_test_query=SELECT 1
+c3p0.test_connection_on_checkout=true
 
 # DHIS
 dhis.username=Cell_Life
