--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -208,6 +208,53 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            
+            <plugin>
+			    <groupId>org.codehaus.mojo</groupId>
+			    <artifactId>jasperreports-maven-plugin</artifactId>
+			    <version>1.0-beta-2</version>
+			    <configuration>
+			        <sourceDirectory>src/main/resources/reports</sourceDirectory>
+			        <outputDirectory>${project.build.directory}/classes/reports
+			        </outputDirectory>
+			        <compiler>net.sf.jasperreports.compilers.JRGroovyCompiler</compiler>
+			    </configuration>
+			    <executions>
+			        <execution>
+			            <goals>
+			                <goal>compile-reports</goal>
+			            </goals>
+			            <phase>compile</phase>
+			        </execution>
+			    </executions>
+			    <dependencies>
+			        <dependency>
+			            <groupId>net.sf.jasperreports</groupId>
+			            <artifactId>jasperreports</artifactId>
+			            <version>${jasperreports.version}</version>
+			        </dependency>
+			        <dependency>
+			            <groupId>ch.qos.logback</groupId>
+			            <artifactId>logback-classic</artifactId>
+			            <version>1.0.10</version>
+			        </dependency>
+			        <dependency>
+			            <groupId>org.codehaus.groovy</groupId>
+			            <artifactId>groovy-all</artifactId>
+			            <version>2.1.1</version>
+			        </dependency>
+			        <dependency>
+			            <groupId>org.springframework</groupId>
+			            <artifactId>spring-context-support</artifactId>
+			            <version>${spring.version}</version>
+			        </dependency>
+			        <dependency>
+			            <groupId>javax.servlet</groupId>
+			            <artifactId>servlet-api</artifactId>
+			            <version>2.5</version>
+			        </dependency>
+			    </dependencies>
+      </plugin>
 
         </plugins>
     </build>
