--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -63,200 +63,203 @@
                 <directory>${project.basedir}/../etc</directory>
             </testResource>
         </testResources>
+        
+        <pluginManagement>
 
-        <plugins>
-
-            <plugin>
-                <groupId>org.codehaus.gmaven</groupId>
-                <artifactId>gmaven-plugin</artifactId>
-                <version>1.5</version>
-                <executions>
-                    <execution>
-                        <id>compile</id>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <phase>compile</phase>
-                    </execution>
-                    <execution>
-                        <id>test-compile</id>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                        <phase>test-compile</phase>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.codehaus.groovy</groupId>
-                        <artifactId>groovy-all</artifactId>
-                        <version>2.1.1</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>default-test</id>
-                        <configuration>
-                            <skip>${jetty.daemon}</skip>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>unit-test</id>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <phase>test</phase>
-                        <configuration>
-                            <skipTests>${skipTests}</skipTests>
-                            <excludes>
-                                <exclude>**/*AcceptanceTest.java</exclude>
-                                <exclude>**/*PerformanceTest.java</exclude>
-                            </excludes>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>acceptance-test</id>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <phase>integration-test</phase>
-                        <configuration>
-                            <skipTests>${skipTests}</skipTests>
-                            <includes>
-                                <include>**/*AcceptanceTest.java</include>
-                            </includes>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>8.0.4.v20111024</version>
-                <executions>
-                    <execution>
-                        <id>jetty-run</id>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <phase>pre-integration-test</phase>
-                    </execution>
-                    <execution>
-                        <id>jetty-stop</id>
-                        <goals>
-                            <goal>stop</goal>
-                        </goals>
-                        <phase>post-integration-test</phase>
-                    </execution>
-                </executions>
-                <configuration>
-                    <daemon>${jetty.daemon}</daemon>
-                    <stopKey>STOP</stopKey>
-                    <stopPort>9001</stopPort>
-                    <webAppConfig>
-                        <contextPath>/ohsc</contextPath>
-                    </webAppConfig>
-                    <connectors>
-                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-                            <port>9000</port>
-                            <maxIdleTime>60000</maxIdleTime>
-                        </connector>
-                    </connectors>
-                    <systemProperties>
-                        <systemProperty>
-                            <key>liquibase.databaseChangeLogTableName</key>
-                            <value>DATABASECHANGELOG</value>
-                        </systemProperty>
-                        <systemProperty>
-                            <key>liquibase.databaseChangeLogLockTableName</key>
-                            <value>DATABASECHANGELOGLOCK</value>
-                        </systemProperty>
-                        <systemProperty>
-                            <key>catalina.base</key>
-                            <value>target</value>
-                        </systemProperty>
-                        <systemProperty>
-                            <key>logback.configurationFile</key>
-                            <value>classpath:logback.xml</value>
-                        </systemProperty>
-                        <systemProperty>
-                            <key>application.properties</key>
-                            <value>file://${project.basedir}/../etc/application.properties</value>
-                        </systemProperty>
-                        <systemProperty>
-                            <key>com.mchange.v2.c3p0.cfg.xml</key>
-                            <value>${project.basedir}/../etc/c3p0-config.xml</value>
-                        </systemProperty>
-                    </systemProperties>
-                    <jvmArgs>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m</jvmArgs>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.h2database</groupId>
-                        <artifactId>h2</artifactId>
-                        <version>1.3.160</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>mysql</groupId>
-                        <artifactId>mysql-connector-java</artifactId>
-                        <version>5.1.22</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            
-            <plugin>
-			    <groupId>org.codehaus.mojo</groupId>
-			    <artifactId>jasperreports-maven-plugin</artifactId>
-			    <version>1.0-beta-2</version>
-			    <configuration>
-			        <sourceDirectory>src/main/resources/reports</sourceDirectory>
-			        <outputDirectory>${project.build.directory}/classes/reports
-			        </outputDirectory>
-			        <compiler>net.sf.jasperreports.compilers.JRGroovyCompiler</compiler>
-			    </configuration>
-			    <executions>
-			        <execution>
-			            <goals>
-			                <goal>compile-reports</goal>
-			            </goals>
-			            <phase>compile</phase>
-			        </execution>
-			    </executions>
-			    <dependencies>
-			        <dependency>
-			            <groupId>net.sf.jasperreports</groupId>
-			            <artifactId>jasperreports</artifactId>
-			            <version>${jasperreports.version}</version>
-			        </dependency>
-			        <dependency>
-			            <groupId>ch.qos.logback</groupId>
-			            <artifactId>logback-classic</artifactId>
-			            <version>1.0.10</version>
-			        </dependency>
-			        <dependency>
-			            <groupId>org.codehaus.groovy</groupId>
-			            <artifactId>groovy-all</artifactId>
-			            <version>2.1.1</version>
-			        </dependency>
-			        <dependency>
-			            <groupId>org.springframework</groupId>
-			            <artifactId>spring-context-support</artifactId>
-			            <version>${spring.version}</version>
-			        </dependency>
-			        <dependency>
-			            <groupId>javax.servlet</groupId>
-			            <artifactId>servlet-api</artifactId>
-			            <version>2.5</version>
-			        </dependency>
-			    </dependencies>
-      </plugin>
-
-        </plugins>
+	        <plugins>
+	
+	            <plugin>
+	                <groupId>org.codehaus.gmaven</groupId>
+	                <artifactId>gmaven-plugin</artifactId>
+	                <version>1.5</version>
+	                <executions>
+	                    <execution>
+	                        <id>compile</id>
+	                        <goals>
+	                            <goal>compile</goal>
+	                        </goals>
+	                        <phase>compile</phase>
+	                    </execution>
+	                    <execution>
+	                        <id>test-compile</id>
+	                        <goals>
+	                            <goal>testCompile</goal>
+	                        </goals>
+	                        <phase>test-compile</phase>
+	                    </execution>
+	                </executions>
+	                <dependencies>
+	                    <dependency>
+	                        <groupId>org.codehaus.groovy</groupId>
+	                        <artifactId>groovy-all</artifactId>
+	                        <version>2.1.1</version>
+	                    </dependency>
+	                </dependencies>
+	            </plugin>
+	
+	            <plugin>
+	                <artifactId>maven-surefire-plugin</artifactId>
+	                <executions>
+	                    <execution>
+	                        <id>default-test</id>
+	                        <configuration>
+	                            <skip>${jetty.daemon}</skip>
+	                        </configuration>
+	                    </execution>
+	                    <execution>
+	                        <id>unit-test</id>
+	                        <goals>
+	                            <goal>test</goal>
+	                        </goals>
+	                        <phase>test</phase>
+	                        <configuration>
+	                            <skipTests>${skipTests}</skipTests>
+	                            <excludes>
+	                                <exclude>**/*AcceptanceTest.java</exclude>
+	                                <exclude>**/*PerformanceTest.java</exclude>
+	                            </excludes>
+	                        </configuration>
+	                    </execution>
+	                    <execution>
+	                        <id>acceptance-test</id>
+	                        <goals>
+	                            <goal>test</goal>
+	                        </goals>
+	                        <phase>integration-test</phase>
+	                        <configuration>
+	                            <skipTests>${skipTests}</skipTests>
+	                            <includes>
+	                                <include>**/*AcceptanceTest.java</include>
+	                            </includes>
+	                        </configuration>
+	                    </execution>
+	                </executions>
+	            </plugin>
+	
+	            <plugin>
+	                <groupId>org.mortbay.jetty</groupId>
+	                <artifactId>jetty-maven-plugin</artifactId>
+	                <version>8.0.4.v20111024</version>
+	                <executions>
+	                    <execution>
+	                        <id>jetty-run</id>
+	                        <goals>
+	                            <goal>run</goal>
+	                        </goals>
+	                        <phase>pre-integration-test</phase>
+	                    </execution>
+	                    <execution>
+	                        <id>jetty-stop</id>
+	                        <goals>
+	                            <goal>stop</goal>
+	                        </goals>
+	                        <phase>post-integration-test</phase>
+	                    </execution>
+	                </executions>
+	                <configuration>
+	                    <daemon>${jetty.daemon}</daemon>
+	                    <stopKey>STOP</stopKey>
+	                    <stopPort>9001</stopPort>
+	                    <webAppConfig>
+	                        <contextPath>/ohsc</contextPath>
+	                    </webAppConfig>
+	                    <connectors>
+	                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+	                            <port>9000</port>
+	                            <maxIdleTime>60000</maxIdleTime>
+	                        </connector>
+	                    </connectors>
+	                    <systemProperties>
+	                        <systemProperty>
+	                            <key>liquibase.databaseChangeLogTableName</key>
+	                            <value>DATABASECHANGELOG</value>
+	                        </systemProperty>
+	                        <systemProperty>
+	                            <key>liquibase.databaseChangeLogLockTableName</key>
+	                            <value>DATABASECHANGELOGLOCK</value>
+	                        </systemProperty>
+	                        <systemProperty>
+	                            <key>catalina.base</key>
+	                            <value>target</value>
+	                        </systemProperty>
+	                        <systemProperty>
+	                            <key>logback.configurationFile</key>
+	                            <value>classpath:logback.xml</value>
+	                        </systemProperty>
+	                        <systemProperty>
+	                            <key>application.properties</key>
+	                            <value>file://${project.basedir}/../etc/application.properties</value>
+	                        </systemProperty>
+	                        <systemProperty>
+	                            <key>com.mchange.v2.c3p0.cfg.xml</key>
+	                            <value>${project.basedir}/../etc/c3p0-config.xml</value>
+	                        </systemProperty>
+	                    </systemProperties>
+	                    <jvmArgs>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m</jvmArgs>
+	                </configuration>
+	                <dependencies>
+	                    <dependency>
+	                        <groupId>com.h2database</groupId>
+	                        <artifactId>h2</artifactId>
+	                        <version>1.3.160</version>
+	                    </dependency>
+	                    <dependency>
+	                        <groupId>mysql</groupId>
+	                        <artifactId>mysql-connector-java</artifactId>
+	                        <version>5.1.22</version>
+	                    </dependency>
+	                </dependencies>
+	            </plugin>
+	            
+	            <plugin>
+				    <groupId>org.codehaus.mojo</groupId>
+				    <artifactId>jasperreports-maven-plugin</artifactId>
+				    <version>1.0-beta-2</version>
+				    <configuration>
+				        <sourceDirectory>src/main/resources/reports</sourceDirectory>
+				        <outputDirectory>${project.build.directory}/classes/reports
+				        </outputDirectory>
+				        <compiler>net.sf.jasperreports.compilers.JRGroovyCompiler</compiler>
+				    </configuration>
+				    <executions>
+				        <execution>
+				            <goals>
+				                <goal>compile-reports</goal>
+				            </goals>
+				            <phase>compile</phase>
+				        </execution>
+				    </executions>
+				    <dependencies>
+				        <dependency>
+				            <groupId>net.sf.jasperreports</groupId>
+				            <artifactId>jasperreports</artifactId>
+				            <version>${jasperreports.version}</version>
+				        </dependency>
+				        <dependency>
+				            <groupId>ch.qos.logback</groupId>
+				            <artifactId>logback-classic</artifactId>
+				            <version>1.0.10</version>
+				        </dependency>
+				        <dependency>
+				            <groupId>org.codehaus.groovy</groupId>
+				            <artifactId>groovy-all</artifactId>
+				            <version>2.1.1</version>
+				        </dependency>
+				        <dependency>
+				            <groupId>org.springframework</groupId>
+				            <artifactId>spring-context-support</artifactId>
+				            <version>${spring.version}</version>
+				        </dependency>
+				        <dependency>
+				            <groupId>javax.servlet</groupId>
+				            <artifactId>servlet-api</artifactId>
+				            <version>2.5</version>
+				        </dependency>
+				    </dependencies>
+	            </plugin>
+	
+	        </plugins>
+		</pluginManagement>
     </build>
 
     <dependencies>
