--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -98,6 +98,7 @@
 	
 	            <plugin>
 	                <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.17</version>
 	                <executions>
 	                    <execution>
 	                        <id>default-test</id>
@@ -137,8 +138,8 @@
 	
 	            <plugin>
 	                <groupId>org.mortbay.jetty</groupId>
-	                <artifactId>jetty-maven-plugin</artifactId>
-	                <version>8.0.4.v20111024</version>
+                    <artifactId>jetty-maven-plugin</artifactId>
+                    <version>8.1.14.v20131031</version>
 	                <executions>
 	                    <execution>
 	                        <id>jetty-run</id>
@@ -146,6 +147,9 @@
 	                            <goal>run</goal>
 	                        </goals>
 	                        <phase>pre-integration-test</phase>
+	                        <configuration>
+	                            <scanIntervalSeconds>0</scanIntervalSeconds>
+	                        </configuration>
 	                    </execution>
 	                    <execution>
 	                        <id>jetty-stop</id>
@@ -157,8 +161,10 @@
 	                </executions>
 	                <configuration>
 	                    <daemon>${jetty.daemon}</daemon>
+	                    <scanIntervalSeconds>10</scanIntervalSeconds>
 	                    <stopKey>STOP</stopKey>
 	                    <stopPort>9001</stopPort>
+	                    <stopWait>10</stopWait>
 	                    <webAppConfig>
 	                        <contextPath>/ohsc</contextPath>
 	                    </webAppConfig>
