EUQ-94: using the new reporting functionality to allow for scheduling of reports

--- a/etc/application.properties
+++ b/etc/application.properties
@@ -63,4 +63,15 @@ averages.service.url=${external.base.url}/service/averages
 rating.service.url=${external.base.url}/service/ratings
 
 # Reporting
-report.delete.cron=0 0 23 * * *
+report.delete.cron=0 0 23 * * * 
+report.scheduled.cron=0 0 9 * * *
+
+# Email (for scheduled reports)
+mailSender.username=technical@cell-life.org
+mailSender.password=xxxxxxxxxxxxxxxxxxx
+mailSender.host=smtp.gmail.com
+mailSender.protocol=smtps
+mailSender.from=technical@cell-life.org
+mailSender.port=465
+mailSender.smtp.auth=false
+mailSender.smtp.starttls.enable=false
