INTERNAL-814: add new report dependency and hook up communicate for SMS report

--- a/etc/application.properties
+++ b/etc/application.properties
@@ -75,3 +75,10 @@ mailSender.from=technical@cell-life.org
 mailSender.port=465
 mailSender.smtp.auth=false
 mailSender.smtp.starttls.enable=false
+
+# Communicate (for sms reports)
+communicate.api=http://sol.cell-life.org/communicate
+communicate.username=
+communicate.password=
+communicate.msisdnPrefix=27
+communicate.msisdnRegex=^27[0-9]{9}$
